--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,21 +3,21 @@
 @tailwind utilities;
 
 body {
-    background-color: #0E1A28ff;
-    position: relative;
-    /* animation: bg .3s alternate infinite; */
+  background-color: #0e1a28ff;
+  position: relative;
+  /* animation: bg .3s alternate infinite; */
 }
 
 @keyframes bg {
-    0% {
-        background-color:rgb(14, 26, 40);
-    }
-    50% {
-        background-color: rgb(66, 74, 66)
-    }
-    100% {
-        background-color: rgb(118, 56, 12);
-    }
+  0% {
+    background-color: rgb(14, 26, 40);
+  }
+  50% {
+    background-color: rgb(66, 74, 66);
+  }
+  100% {
+    background-color: rgb(118, 56, 12);
+  }
 }
 
 @font-face {
@@ -40,28 +40,76 @@ body {
 }
 
 .custom-shadow {
-    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
-  rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
-
 .text-gradient {
-  background: -webkit-linear-gradient(#fce8b6ff,#BF6525ff, #7eff7bff);
+  /* background: -webkit-linear-gradient(#fce8b6ff,#BF6525ff, #7eff7bff); */
+  background-image: -webkit-linear-gradient(92deg, #fce8b6ff,#BF6525ff, #7eff7bff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 5s infinite linear;
+}
+
+@-webkit-keyframes hue {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+  }
+  to {
+    -webkit-filter: hue-rotate(-360deg);
+  }
 }
 
 .fadeIn {
-    animation: fadeIn .5s ease-in-out;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+.scaleIn {
+  transform: scale(0);
+  opacity: 0;
+  animation: scaleIn 1s ease-in-out forwards;
+}
+
+.slideIn {
+  transform: scale(0);
+  opacity: 0;
+  animation: slideIn 1s ease-in-out forwards;
+}
+
+.delayed {
+  animation-delay: 1s !important;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    transform: scale(0.3);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes scaleIn {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
